# Mtac2

./: .gitignore  .merlin  .travis.yml  CHANGES.md  GNUmakefile  LICENSE  Make  Makefile.local  README.md  TODO.md  _CoqProject  bors.toml  configure.sh  dune-project  opam  todo.org
examples/: .#tauto.v  basics_tutorial.v  tactics.v  tauto.v
src/: META.coq-mtac2.in  MetaCoqPlugin.mllib  MetaCoqPlugin.mlpack  cClosure_copy.ml  constrs.ml  constrs.mli  dune  mConstr.ml  mConstr.mli  machine.ml  machine.mli  metaCoqInit.ml4  metaCoqInit.mlg  metaCoqInstr.mli  metaCoqInterp.ml  metaCoqInterp.mli  metaCoqTactic.ml  metaCoqTactic.ml4  metaCoqTactic.mlg  metaCoqTactic.mli  mtac2Initialization.ml4  mtac2Instr.mli  mtac2Interp.ml  mtac2Interp.mli  mtac2Mode.ml4  mtac2Parser.ml4  mtac2Plugin.mllib  mtac2ProofInfos.ml  mtac2Run.ml  mtacNames.ml  mtacNames.mli  run.ml  run.mli
stdlib-benchs/: Makefile
tests/: ConstrSelector.v  DepDestruct.v  Exhaustive.v  LtacEmuTests.v  MCImports.v  Makefile  NewTactics.v  Showcase.v  UnivSanityCheck.v  abs.v  abs_prod.v  binders.v  bug_evar.v  bug_universes.v  bugs.v  cevar.v  comptactics.v  debug_ex.v  debugger.v  decapp.v  declare.v  decompose.v  decompose_app.v  dependent_let_goals.v  destruct_eq.v  do.v  dummylang.v  evar.v  exceptions.v  goal_reordering.v  hugo.v  hyps.v  initialization.v  intropatt.v  jannomove.v  kind_of_term.v  lift.v  ltac.v  ltac_rewrite.v  match_goal_context.v  (+44 more)
theories/: Abstract.v  Base.v  CompoundTactics.v  ConstrSelector.v  Datatypes.v  Debugger.v  DecomposeApp.v  DepDestruct.v  Exhaustive.v  ImportedTactics.v  (+31 more)
(+102 files in other folders)
