(library
 (name MetaCoqPlugin)
 (public_name mtac2.plugin)
 (flags :standard -warn-error -3-9-23-26-27-32-33-50 -open Unicoq)
 (modules_without_implementation metaCoqInstr)
 (modules :standard \ machine)
 (libraries coq.plugins.ltac unicoq.plugin))

(rule
 (targets metaCoqInit.ml)
 (deps (:pp-file metaCoqInit.mlg))
 (action (run coqpp %{pp-file})))

(rule
 (targets metaCoqTactic.ml)
 (deps (:pp-file metaCoqTactic.mlg))
 (action (run coqpp %{pp-file})))

