(library
 (name MetaCoqPlugin)
 (public_name coq-mtac2.plugin)
 (flags :standard -rectypes -w -9-27-23 -warn-error -3)
 (modules_without_implementation metaCoqInstr)
 (modules :standard)
 (libraries coq.plugins.ltac unicoq.plugin))

(rule
 (targets metaCoqInit.ml)
 (deps (:pp-file metaCoqInit.mlg))
 (action (run coqpp %{pp-file})))

(rule
 (targets metaCoqTactic.ml)
 (deps (:pp-file metaCoqTactic.mlg))
 (action (run coqpp %{pp-file})))

